refactor: FBS and Features

--- a/Project/TurkishAirlines/sonar-project.properties
+++ b/Project/TurkishAirlines/sonar-project.properties
@@ -1,1 +1,8 @@
 sonar.projectKey=flight-booking-og
+sonar.projectName=FlightBookingSystem 
+sonar.projectVersion=1.0
+sonar.sources=src
+sonar.java.binaries=build/web/WEB-INF/classes
+sonar.sourceEncoding=UTF-8
+sonar.token=sqp_9320a5b212a4171d8077f8f48694574dc652b55b
+sonar.host.url=http://localhost:9000
